# napari-mask-curator

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
src/napari_mask_curator/: __init__.py  _widget.py  napari.yaml
tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
